# infinary_agent

./: .gitattributes  .gitignore  README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
infinary_agent/: __init__.py  api.py  hooks.py  modules.txt  patches.txt
infinary_agent/infinary_agent/: __init__.py
scripts/: build-agent-artifact.sh  release.sh
sidecar/: infinary_agent.py  requirements.txt
tests/: conftest.py  test_apply_image_covenant.py  test_decisions.py  test_release_hygiene.py  test_upgrade_pipeline.py
